yandex mobileads 8.5.0 + apk repack telemetry (bd 2q3)
- mobileads 7.16.1 -> 8.5.0 in both googlePlay and ruStore flavors
  (8.5.0 AAR manifest declares minSdk 21, fits ruStore's 23)
- provider migration verified against the 8.5.0 jar: ad unit id moves
  into AdRequest, BannerAdSize.stickySize -> sticky, common.MobileAds ->
  common.YandexAds, loader.setAdLoadListener -> loadAd(request, listener),
  banner onLeftApplication/onReturnedToApplication callbacks dropped
- AppIntegrity (android source set): signing cert sha256 + installer
  source + jiagu packer probes (manifest application class swap,
  com.stub.StubApp, libjiagu in /proc/self/maps, .jiagu data dir);
  runs outside the checkOwnSignature gate so repacked installs
  self-label instead of going silent
- googlePlay MarketApp.integrityReport: crashlytics custom keys
  repacked/packer/installer/sig_sha256 on every install + consent-gated
  app_integrity analytics event; ruStore/fdroid stubs
- /debug/integrity endpoint via new BaseWebServer.registerDebugEndpoint
- ruStore EventCollector logException(Exception,String) widened to
  Throwable: fixes pre-existing ruStore flavor compile break against
  InterlevelScene
- tests: AppIntegrityTest (sha256 vectors + repacked verdict truth
  table); StringResourceValidationTest Files.readString -> readAllBytes
  (not in compile classpath, blocked all unit tests)
- emulator-verified: app boots, 'Yandex Mobile Ads 8.5.0 integrated
  successfully', /debug/integrity reports cert hash matching keytool